--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/server.js"
-
   },
   "keywords": [],
   "author": "",
@@ -14,7 +13,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.6.0",
-    "mongoose": "^5.10.1"
+    "mongoose": "^5.10.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
