--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.1",
     "multer": "^1.4.2"
